# rust-rosetta

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Makefile  N_queens_problem.rs  README.md  a+b.rs  anagrams.rs  appveyor.yml  arithmetic_mean.rs  bors.toml  build.rs  build.sh  callback_to_array.rs  check_file.rs  clippy.toml  concurrent_computing.rs  count_in_octal.rs  coverage.json  create_file.rs  entropy.rs  factorial.rs  fibonacci_word.rs  filesize.rs  flatten_list.rs  guess_number.rs  hailstone.rs  input_is_terminal.rs  install_kcov.sh  integer_sequence.rs  lzw.rs  markov_algorithm.rs  out.txt  output_is_terminal.rs  palindrome.rs  primality_trial_div.rs  prime_decomposition.rs  read_file_line.rs  recursion_depth.rs  (+3 more)
.github/workflows/: ci.yaml  publish-coverage.yaml
coverage/: Cargo.toml
coverage/src/: lib.rs  main.rs
meta/: Cargo.toml
meta/src/: errors.rs  lib.rs  local.rs  remote.rs  test_utils.rs
resources/: Pentagon.pgm  align_columns_input.txt  fib1000.txt  input.txt  paragraph.txt  test_data.fasta
src/: 100_doors.rs  100_doors_unoptimized.rs  100doors_unoptimized.rs  2048.rs  24_game.rs  24_game_rpn.rs  24_game_solve.rs  99_bottles_of_beer.rs  9_billion_names_of_God_the_integer.rs  9_billion_names_of_god_the_integer.rs  JSON.rs  N_queens_problem.rs  a+b.rs  a_plus_b.rs  abc_problem.rs  abstract_type.rs  accumulator_factory.rs  ackermann_function.rs  active_object.rs  address_of_a_variable.rs  agm.rs  aks_test_for_primes.rs  align_columns.rs  aliquot_sequence_classifications.rs  almost_prime.rs  amicable_pairs.rs  anagrams.rs  anonymous_recursion.rs  arena_storage_pool.rs  arithmetic-geometric_mean.rs  arithmetic_integers.rs  arithmetic_mean.rs  arithmetic_rational.rs  array_concatenation.rs  array_length.rs  arrays.rs  assertions.rs  atomic_updates.rs  average_loop_length.rs  averages_arithmetic_mean.rs  (+303 more)
src/24_game/: solve.rs
src/arithmetic/: complex.rs  integer.rs  rational.rs
src/associative_array/: creation.rs  iteration.rs
src/averages/: arithmetic_mean.rs  mean_angle.rs  median.rs  mode.rs  root_mean_square.rs
src/bitcoin/: address_validation.rs
src/bitmap/: write_a_ppm_file.rs
src/closures/: value_capture.rs
src/doubly_linked_list/: element_definition.rs  element_insertion.rs
src/factorial_plugin/: Cargo.toml
src/guess_the_number/: with_feedback.rs  with_feedback_player.rs
src/hello_world/: graphical.rs  line_printer.rs  mod.rs  newbie.rs  newline_omission.rs  standard_error.rs  text.rs  web_server.rs
src/https/: authenticated.rs
src/keyboard_input/: obtain_a_y_or_n_response.rs
src/knapsack_problem/: 0-1.rs
src/levenshtein_distance/: alignment.rs
src/loops/: break.rs  continue.rs  do_while.rs  downward_for.rs  for.rs  for_with_a_specified_step.rs  foreach.rs  n_plus_one_half.rs  nested.rs  while.rs
src/md5/: implementation.rs
src/queue/: definition.rs
src/roman_numerals/: decode.rs  encode.rs
src/rosetta_code/: find_bare_lang_tags.rs  find_unimplemented_tasks.rs  fix_code_tags.rs  mod.rs
src/singly_linked_list/: element_definition.rs  element_insertion.rs  traversal.rs
src/sorting_algorithms/: bogo_sort.rs  bubble_sort.rs  cocktail_sort.rs  comb_sort.rs  counting_sort.rs  gnome_sort.rs  heap_sort.rs  insertion_sort.rs  merge_sort.rs  pancake_sort.rs  quick_sort.rs  radix_sort.rs  selection_sort.rs  shell_sort.rs  sleep_sort.rs  stooge_sort.rs
src/strip_whitespace_from_a_string/: top_and_tail.rs
src/unix/: ls.rs
src/use_another_language_to_call_a_function/: Cargo.toml
src/user_input/: text.rs
src/walk_a_directory/: non_recursively.rs  recursively.rs
tasks/100-doors/: Cargo.toml
tasks/15-puzzle-game/: Cargo.toml
tasks/2048/: Cargo.toml
tasks/24-game/: Cargo.toml
tasks/9-billion-names-of-god-the-integer/: Cargo.toml
tasks/99-bottles-of-beer/: Cargo.toml
tasks/_100-doors/: Cargo.toml
tasks/_15-puzzle-game/: Cargo.toml
tasks/_2048/: Cargo.toml
tasks/_24-game/: Cargo.toml
tasks/_9-billion-names-of-god-the-integer/: Cargo.toml
tasks/_99-bottles-of-beer/: Cargo.toml
tasks/a-plus-b/: Cargo.toml
tasks/abbreviations-easy/: Cargo.toml
tasks/abc-problem/: Cargo.toml
tasks/abstract-type/: Cargo.toml
tasks/abundant-deficient-and-perfect-number-classifications/: Cargo.toml
tasks/accumulator-factory/: Cargo.toml
tasks/ackermann-function/: Cargo.toml
tasks/active-object/: Cargo.toml
tasks/address-of-a-variable/: Cargo.toml
tasks/aks-test-for-primes/: Cargo.toml
tasks/align-columns/: Cargo.toml
tasks/aliquot-sequence-classifications/: Cargo.toml
tasks/angle-difference-between-two-bearings/: Cargo.toml
tasks/angle-difference-between-two-bearings/src/: main.rs
tasks/arrays/: Cargo.toml
tasks/egyptian-fractions/: Cargo.toml
tasks/egyptian-fractions/src/: main.rs
tasks/formal-power-series/: Cargo.toml
tasks/formal-power-series/src/: fps.rs  lib.rs
tasks/hickerson-series-of-almost-integers/: Cargo.toml
tasks/hickerson-series-of-almost-integers/src/: main.rs
tasks/mouse-position/: Cargo.toml
tasks/mouse-position/src/: main.rs
tasks/narcissistic-decimal-number/: Cargo.toml
tasks/narcissistic-decimal-number/src/: main.rs
tasks/one-dimensional-cellular-automata/: Cargo.toml
tasks/one-dimensional-cellular-automata/src/: main.rs
tasks/pangram-checker/: Cargo.toml
tasks/pangram-checker/benches/: benchmarks.rs
tasks/pangram-checker/src/: lib.rs  main.rs
tasks/phrase-reversals/: Cargo.toml
tasks/phrase-reversals/src/: lib.rs
tasks/rosetta-code/count-examples/: Cargo.toml
tasks/rosetta-code/count-examples/src/: lib.rs  main.rs
tasks/rosetta-code/find-unimplemented-tasks/: Cargo.toml
tasks/rosetta-code/find-unimplemented-tasks/src/: lib.rs  main.rs
tasks/snake/: Cargo.toml
tasks/snake/src/: cfg_windows.rs  main.rs
tasks/validate-isin/: Cargo.toml
tasks/validate-isin/src/: lib.rs  main.rs
tasks/water-collected-between-towers/: Cargo.toml
tasks/water-collected-between-towers/src/: main.rs
tasks/write-to-a-windows-event-log/: Cargo.toml  build.rs
tasks/write-to-a-windows-event-log/src/: main.rs
tests/: all.rs  meta.rs
(+983 files in other folders)
