[package]
name = "rust-rosetta"
version = "0.0.1"
build = "build.rs"
authors = [
    "Andrew Hobden, https://github.com/Hoverbear",
    "Adolfo Ochagavía, https://github.com/aochagavia",
    "Paolo Falabella, https://github.com/pfalabella",
    "Boris Egorov, https://github.com/JIghtuse",
    "Joe Schafer, https://github.com/jschaf",
    "Thomas P, https://github.com/TisButMe",
    "Bjarki Ágúst Guðmundsson, https://github.com/SuprDewd",
    "Thiez, https://github.com/Thiez",
    "Simon Morris simon,-https://github.com/morris",
    "eliovir, https://github.com/eliovir",
    "Joshua Yanovski, https://github.com/pythonesque",
    "Nicolas Barbey, https://github.com/nbarbey",
    "yuanchenyang, https://github.com/yuanchenyang",
    "Jonathan S, https://github.com/gereeter",
    "JakeMick, https://github.com/JakeMick",
    "Rohan Prinja, https://github.com/wenderen",
    "Andres Nötzli, https://github.com/4tXJ7f",
    "Eric S. Bullington, https://github.com/esbullington",
    "Gulshan Singh, https://github.com/gsingh93",
    "SiegeLord, https://github.com/SiegeLord",
    "Tim Joseph Dumol, https://github.com/TimDumol",
    "Utkarsh Kukreti, https://github.com/utkarshkukreti",
    "Florian MOREL, https://github.com/Einh06",
    "webmobster, https://github.com/webmobster",
    "Mathias Labeyrie, https://github.com/Nojan",
    "Wei Yen, https://github.com/yen223",
    "Hugh Manning, https://github.com/hmanning77",
    "Gavin Baker, https://github.com/gavinb",
    "Rupert Lane, https://github.com/rupertl",
    "Joshua Skootsky, https://github.com/JoshuaSkootsky",
    "James Hurst, https://github.com/jamesrhurst",
    "Yukang Chen, https://github.com/chenyukang",
    "Rahul Sharma, https://github.com/creativcoder",
    "Rootul Patel, https://github.com/rootulp",
    "Frank McSherry, http://github.com/frankmcsherry",
    "Bartosz Marcinkowski, https://github.com/bm371613",
    "Yale Cason, https://github.com/ghotiphud",
    "Makoto Nakashima, https://github.com/gifnksm",
    "Marvin Löbel, https://github.com/Kimundi",
    "Raphael Heitjohann, https://github.com/trideon3",
    "Glen De Cauwsemaecker, https://github.com/glendc",
    "Amos Bird, https://github.com/amosbird",
    "Brian Schmitz, https://github.com/foodhype",
    "Juan Vidal Pich, https://github.com/juanevp",
    "Peter Jacobs, https://github.com/crespyl",
    "Alex Globus, https://github.com/aglobus",
    "Tair Rzayev, https://github.com/tairrzayev",
    "Mathieu David, https://github.com/azerupi",
    "Keiichi Watanabe, https://github.com/kw-udon",
    "ZoomRmc, https://github.com/zoomrmc",
    "Kevin Darlington, https://github.com/kdar",
    "Andy Russell, https://github.com/euclio",
    "Joel S, https://github.com/bitrauser",
    "Stefan Bostain, https://github.com/zilulil",
    "Fernando Gimenez, https://github.com/pijamarda",
    "Michael Huynh, https://github.com/miqid",
    "Marc Tiehuis, https://github.com/tiehuis",
    "Dillon Tracy, https://github.com/ibnopcit",
    "Orhan Balci, https://github.com/orhanbalci",
    "Jesús Espino, https://github.com/jespino",
    "Allen Bui, https://github.com/allenbui94",
    "Andrey Tonkih, https://github.com/xosmig",
    "Thibault Barbie, https://github.com/thibaultbarbie"
]

[dependencies]
difference = "0.4.1"
docopt = "0.6"
docopt_macros = "0.6.81"
rustc-serialize = "0.3"
term = "0.4"

[dependencies.meta]
path = "meta"

[build-dependencies]
meta = { path = "meta" }
unicode-segmentation = "0.1.2"

[workspace]
members = [
    # http://rosettacode.org/wiki/100_doors
    "tasks/100-doors",

    # http://rosettacode.org/wiki/2048
    "tasks/2048",

    # http://rosettacode.org/wiki/24_game
    "tasks/24-game",

    # http://rosettacode.org/wiki/24_game/Solve
    "tasks/24-game/solve",

    # http://rosettacode.org/wiki/9_billion_names_of_God_the_integer
    "tasks/9-billion-names-of-god-the-integer",

    # http://rosettacode.org/wiki/99_Bottles_of_Beer
    "tasks/99-bottles-of-beer",

    # http://rosettacode.org/wiki/A%2BB
    "tasks/a-plus-b",

    # http://rosettacode.org/wiki/ABC_Problem
    "tasks/abc-problem",

    # http://rosettacode.org/wiki/Abstract_type
    "tasks/abstract-type",

    # http://rosettacode.org/wiki/Accumulator_factory
    "tasks/accumulator-factory",

    # http://rosettacode.org/wiki/Ackermann_function
    "tasks/ackermann-function",

    # http://rosettacode.org/wiki/Active_object
    "tasks/active-object",

    # http://rosettacode.org/wiki/Address_of_a_variable
    "tasks/address-of-a-variable",

    # http://rosettacode.org/wiki/AKS_test_for_primes
    "tasks/aks-test-for-primes",

    # http://rosettacode.org/wiki/Align_columns
    "tasks/align-columns",

    # http://rosettacode.org/wiki/Aliquot_sequence_classifications
    "tasks/aliquot-sequence-classifications",

    # http://rosettacode.org/wiki/Almost_prime
    "tasks/almost-prime",

    # http://rosettacode.org/wiki/Amicable_pairs
    "tasks/amicable-pairs",

    # http://rosettacode.org/wiki/Arbitrary-precision_integers_(included)
    "tasks/arbitrary-precision-integers-included",

    # http://rosettacode.org/wiki/Arithmetic/Complex
    "tasks/arithmetic/complex",

    # http://rosettacode.org/wiki/Arithmetic/Rational
    "tasks/arithmetic/rational",

    # http://rosettacode.org/wiki/Atomic_updates
    "tasks/atomic-updates",

    # http://rosettacode.org/wiki/Average_loop_length
    "tasks/average-loop-length",

    # http://rosettacode.org/wiki/AVL_tree
    "tasks/avl-tree",

    # http://rosettacode.org/wiki/Balanced_brackets
    "tasks/balanced-brackets",

    # http://rosettacode.org/wiki/Bernoulli_numbers
    "tasks/bernoulli-numbers",

    # http://rosettacode.org/wiki/Best_shuffle
    "tasks/best-shuffle",

    # http://rosettacode.org/wiki/Bitcoin/address_validation
    "tasks/bitcoin/address-validation",

    # http://rosettacode.org/wiki/Bitmap
    "tasks/bitmap",

    # http://rosettacode.org/wiki/Bitmap/Write_a_PPM_file
    "tasks/bitmap/write-a-ppm-file",

    # http://rosettacode.org/wiki/Brownian_tree
    "tasks/brownian-tree",

    # http://rosettacode.org/wiki/Bulls_and_cows
    "tasks/bulls-and-cows",

    # http://rosettacode.org/wiki/Call_a_foreign-language_function
    "tasks/call-a-foreign-language-function",

    # http://rosettacode.org/wiki/Check_input_device_is_a_terminal
    "tasks/check-input-device-is-a-terminal",

    # http://rosettacode.org/wiki/Check_output_device_is_a_terminal
    "tasks/check-output-device-is-a-terminal",

    # http://rosettacode.org/wiki/Closest-pair_problem
    "tasks/closest-pair-problem",

    # http://rosettacode.org/wiki/Compile-time_calculation
    "tasks/compile-time-calculation",

    # http://rosettacode.org/wiki/Concurrent_computing
    "tasks/concurrent-computing",

    # http://rosettacode.org/wiki/Create_a_file
    "tasks/create-a-file",

    # http://rosettacode.org/wiki/Date_format
    "tasks/date-format",

    # http://rosettacode.org/wiki/Day_of_the_week
    "tasks/day-of-the-week",

    # http://rosettacode.org/wiki/Discordian_date
    "tasks/discordian-date",

    # http://rosettacode.org/wiki/Dot_product
    "tasks/dot-product",

    # http://rosettacode.org/wiki/Dutch_national_flag_problem
    "tasks/dutch-national-flag-problem",

    # http://rosettacode.org/wiki/Entropy
    "tasks/entropy",

    # http://rosettacode.org/wiki/Equilibrium_index
    "tasks/equilibrium-index",

    # http://rosettacode.org/wiki/Evaluate_binomial_coefficients
    "tasks/evaluate-binomial-coefficients",

    # http://rosettacode.org/wiki/Events
    "tasks/events",

    # http://rosettacode.org/wiki/Evolutionary_algorithm
    "tasks/evolutionary-algorithm",

    # http://rosettacode.org/wiki/Fast_Fourier_transform
    "tasks/fast-fourier-transform",

    # http://rosettacode.org/wiki/Fibonacci_word
    "tasks/fibonacci-word",

    # http://rosettacode.org/wiki/Flipping_bits_game
    "tasks/flipping-bits-game",

    # http://rosettacode.org/wiki/Greatest_common_divisor
    "tasks/greatest-common-divisor",

    # http://rosettacode.org/wiki/Guess_the_number
    "tasks/guess-the-number",

    # http://rosettacode.org/wiki/Guess_the_number/With_feedback
    "tasks/guess-the-number/with-feedback",

    # http://rosettacode.org/wiki/Hamming_numbers
    "tasks/hamming-numbers",

    # http://rosettacode.org/wiki/Handle_a_signal
    "tasks/handle-a-signal",

    # http://rosettacode.org/wiki/Hello_world/Graphical
    "tasks/hello-world/graphical",

    # http://rosettacode.org/wiki/Hello_world/Web_server
    "tasks/hello-world/web-server",

    # http://rosettacode.org/wiki/Horner%27s_rule_for_polynomial_evaluation
    "tasks/horners-rule-for-polynomial-evaluation",

    # http://rosettacode.org/wiki/HTTP
    "tasks/http",

    # http://rosettacode.org/wiki/HTTPS
    "tasks/https",

    # http://rosettacode.org/wiki/HTTPS/Authenticated
    "tasks/https/authenticated",

    # http://rosettacode.org/wiki/IBAN
    "tasks/iban",

    # http://rosettacode.org/wiki/Include_a_file
    "tasks/include-a-file",

    # http://rosettacode.org/wiki/Integer_sequence
    "tasks/integer-sequence",

    # http://rosettacode.org/wiki/JSON
    "tasks/json",

    # http://rosettacode.org/wiki/K-d_tree
    "tasks/k-d-tree",

    # http://rosettacode.org/wiki/K-means%2B%2B_clustering
    "tasks/k-meanspp-clustering",

    # http://rosettacode.org/wiki/Kahan_summation
    "tasks/kahan-summation",

    # http://rosettacode.org/wiki/Keyboard_input/Obtain_a_Y_or_N_response
    "tasks/keyboard-input/obtain-a-y-or-n-response",

    # http://rosettacode.org/wiki/Knuth_shuffle
    "tasks/knuth-shuffle",

    # http://rosettacode.org/wiki/Look-and-say_sequence
    "tasks/look-and-say-sequence",

    # http://rosettacode.org/wiki/Loops/Break
    "tasks/loops/break",

    # http://rosettacode.org/wiki/Loops/Nested
    "tasks/loops/nested",

    # http://rosettacode.org/wiki/Lychrel_numbers
    "tasks/lychrel-numbers",

    # http://rosettacode.org/wiki/MD5
    "tasks/md5",

    # http://rosettacode.org/wiki/Modular_exponentiation
    "tasks/modular-exponentiation",

    # http://rosettacode.org/wiki/Monte_Carlo_methods
    "tasks/monte-carlo-methods",

    # http://rosettacode.org/wiki/Mouse_position
    "tasks/mouse-position",

    # http://rosettacode.org/wiki/One_of_n_lines_in_a_file
    "tasks/one-of-n-lines-in-a-file",

    # http://rosettacode.org/wiki/OpenGL
    "tasks/opengl",

    # http://rosettacode.org/wiki/Parallel_calculations
    "tasks/parallel-calculations",

    # http://rosettacode.org/wiki/Penney%27s_game
    "tasks/penneys-game",

    # http://rosettacode.org/wiki/Pernicious_numbers
    "tasks/pernicious-numbers",

    # http://rosettacode.org/wiki/Pick_random_element
    "tasks/pick-random-element",

    # http://rosettacode.org/wiki/Playing_cards
    "tasks/playing-cards",

    # http://rosettacode.org/wiki/Prime_decomposition
    "tasks/prime-decomposition",

    # http://rosettacode.org/wiki/Quine
    "tasks/quine",

    # http://rosettacode.org/wiki/Random_numbers
    "tasks/random-numbers",

    # http://rosettacode.org/wiki/Range_expansion
    "tasks/range-expansion",

    # http://rosettacode.org/wiki/Range_extraction
    "tasks/range-extraction",

    # http://rosettacode.org/wiki/Remove_lines_from_a_file
    "tasks/remove-lines-from-a-file",

    # http://rosettacode.org/wiki/Reverse_a_string
    "tasks/reverse-a-string",

    # http://rosettacode.org/wiki/Rock-paper-scissors
    "tasks/rock-paper-scissors",

    # http://rosettacode.org/wiki/Roots_of_a_function
    "tasks/roots-of-a-function",

    # http://rosettacode.org/wiki/Roots_of_unity
    "tasks/roots-of-unity",

    # http://rosettacode.org/wiki/Rosetta_Code/Find_bare_lang_tags
    "tasks/rosetta-code/find-bare-lang-tags",

    # http://rosettacode.org/wiki/Rosetta_Code/Find_unimplemented_tasks
    "tasks/rosetta-code/find-unimplemented-tasks",

    # http://rosettacode.org/wiki/Rosetta_Code/Fix_code_tags
    "tasks/rosetta-code/fix-code-tags",

    # http://rosettacode.org/wiki/RSA_code
    "tasks/rsa-code",

    # http://rosettacode.org/wiki/Run-length_encoding
    "tasks/run-length-encoding",

    # http://rosettacode.org/wiki/SHA-256
    "tasks/sha-256",

    # http://rosettacode.org/wiki/Show_the_epoch
    "tasks/show-the-epoch",

    # http://rosettacode.org/wiki/Sorting_algorithms/Bubble_sort
    "tasks/sorting-algorithms/bubble-sort",

    # http://rosettacode.org/wiki/Sorting_algorithms/Cocktail_sort
    "tasks/sorting-algorithms/cocktail-sort",

    # http://rosettacode.org/wiki/Sorting_algorithms/Insertion_sort
    "tasks/sorting-algorithms/insertion-sort",

    # http://rosettacode.org/wiki/Sorting_algorithms/Shell_sort
    "tasks/sorting-algorithms/shell-sort",

    # http://rosettacode.org/wiki/Sorting_algorithms/Stooge_sort
    "tasks/sorting-algorithms/stooge-sort",

    # http://rosettacode.org/wiki/Sparkline_in_unicode
    "tasks/sparkline-in-unicode",

    # http://rosettacode.org/wiki/Statistics/Basic
    "tasks/statistics/basic",

    # http://rosettacode.org/wiki/System_time
    "tasks/system-time",

    # http://rosettacode.org/wiki/Tic-tac-toe
    "tasks/tic-tac-toe",

    # http://rosettacode.org/wiki/URL_parser
    "tasks/url-parser",

    # http://rosettacode.org/wiki/Use_another_language_to_call_a_function
    "tasks/use-another-language-to-call-a-function",

    # http://rosettacode.org/wiki/Visualize_a_tree
    "tasks/visualize-a-tree",

    # http://rosettacode.org/wiki/Walk_a_directory/Non-recursively
    "tasks/walk-a-directory/non-recursively",

    # http://rosettacode.org/wiki/Walk_a_directory/Recursively
    "tasks/walk-a-directory/recursively",

    # http://rosettacode.org/wiki/Window_creation
    "tasks/window-creation",
]

[[bin]]
name = "coverage"
path = "src/bin/coverage.rs"

[[bin]]
# http://rosettacode.org/wiki/Anagrams
name = "anagrams"
path = "src/anagrams.rs"

[[bin]]
# http://rosettacode.org/wiki/Anonymous_recursion
name = "anonymous_recursion"
path = "src/anonymous_recursion.rs"

[[bin]]
# http://rosettacode.org/wiki/Arena_storage_pool
name = "arena_storage_pool"
path = "src/arena_storage_pool.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Arithmetic-geometric_mean
name = "arithmetic-geometric_mean"
path = "src/arithmetic-geometric_mean.rs"

[[bin]]
# http://rosettacode.org/wiki/Arithmetic/Integer
name = "arithmetic_integer"
path = "src/arithmetic/integer.rs"
test = false

[[bin]]
# http://www.rosettacode.org/wiki/Array_concatenation
name = "array_concatenation"
path = "src/array_concatenation.rs"

[[bin]]
# http://www.rosettacode.org/wiki/Array_length
name = "array_length"
path = "src/array_length.rs"

[[bin]]
# http://rosettacode.org/wiki/Arrays
name = "arrays"
path = "src/arrays.rs"

[[bin]]
# http://rosettacode.org/wiki/Assertions
name = "assertions"
path = "src/assertions.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Associative_array/Creation
name = "associative_array_creation"
path = "src/associative_array/creation.rs"

[[bin]]
# http://rosettacode.org/wiki/Associative_array/Iteration
name = "associative_array_iteration"
path = "src/associative_array/iteration.rs"

[[bin]]
# http://rosettacode.org/wiki/Averages/Arithmetic_mean
name = "averages_arithmetic_mean"
path = "src/averages/arithmetic_mean.rs"

[[bin]]
# http://rosettacode.org/wiki/Averages/Mean_angle
name = "averages_mean_angle"
path = "src/averages/mean_angle.rs"

[[bin]]
# http://www.rosettacode.org/wiki/Averages/Median
name = "averages_median"
path = "src/averages/median.rs"

[[bin]]
# http://www.rosettacode.org/wiki/Averages/Mode
name = "averages_mode"
path = "src/averages/mode.rs"

[[bin]]
# http://rosettacode.org/wiki/Averages/Root_mean_square
name = "averages_root_mean_square"
path = "src/averages/root_mean_square.rs"
test = true

[[bin]]
# http://rosettacode.org/wiki/Benford%27s_law
name = "benford"
path = "src/benford.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Binary_digits
name = "binary_digits"
path = "src/binary_digits.rs"

[[bin]]
# http://rosettacode.org/wiki/Binary_search
name = "binary_search"
path = "src/binary_search.rs"

[[bin]]
# http://rosettacode.org/wiki/Bitwise_operations
name = "bitwise_operations"
path = "src/bitwise_operations.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Boolean_values
name = "boolean_values"
path = "src/boolean_values.rs"

[[bin]]
# http://rosettacode.org/wiki/Caesar_cipher
name = "caesar_cipher"
path = "src/caesar_cipher.rs"

[[bin]]
# http://rosettacode.org/wiki/Call_an_object_method
name = "call_an_object_method"
path = "src/call_an_object_method.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Apply_a_callback_to_an_array
name = "callback_to_array"
path = "src/callback_to_array.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Carmichael_3_strong_pseudoprimes
name = "carmichael_3_strong_pseudoprimes"
path = "src/carmichael_3_strong_pseudoprimes.rs"

[[bin]]
# http://rosettacode.org/wiki/Catalan_numbers
name = "catalan_numbers"
path = "src/catalan_numbers.rs"

[[bin]]
# http://rosettacode.org/wiki/Catamorphism
name = "catamorphism"
path = "src/catamorphism.rs"

[[bin]]
# http://rosettacode.org/wiki/Character_codes
name = "character_codes"
path = "src/character_codes.rs"

[[bin]]
# http://rosettacode.org/wiki/Chat_server
name = "chat_server"
path = "src/chat_server.rs"

[[bin]]
# http://rosettacode.org/wiki/Check_that_file_exists
name = "check_file"
path = "src/check_file.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Checkpoint_synchronization
name = "checkpoint_synchronization"
path = "src/checkpoint_synchronization.rs"

[[bin]]
# http://rosettacode.org/wiki/Chinese_remainder_theorem
name = "chinese_remainder"
path = "src/chinese_remainder.rs"

[[bin]]
# http://rosettacode.org/wiki/Circles_of_given_radius_through_two_points
name = "circles_of_given_radius_through_two_points"
path = "src/circles_of_given_radius_through_two_points.rs"

[[bin]]
# http://rosettacode.org/wiki/Closures/Value_capture
name = "closures_value_capture"
path = "src/closures/value_capture.rs"

[[bin]]
# http://rosettacode.org/wiki/Collections
name = "collections"
path = "src/collections.rs"

[[bin]]
# http://rosettacode.org/wiki/Combinations
name = "combinations"
path = "src/combinations.rs"

[[bin]]
# http://rosettacode.org/wiki/Comma_quibbling
name = "comma_quibbling"
path = "src/comma_quibbling.rs"

[[bin]]
# http://rosettacode.org/wiki/Command-line_arguments
name = "command_line_arguments"
path = "src/command_line_args.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Comments
name = "comments"
path = "src/comments.rs"

[[bin]]
# http://rosettacode.org/wiki/Compound_data_type
name = "compound_data_type"
path = "src/compound_data_type.rs"

[[bin]]
# http://rosettacode.org/wiki/Continued_fraction
name = "continued_fraction"
path = "src/continued_fraction.rs"

[[bin]]
# http://rosettacode.org/wiki/Continued_fraction/Arithmetic/Construct_from_rational_number
name = "continued_fraction_from_rational"
path = "src/continued_fraction_from_rational.rs"

[[bin]]
# http://rosettacode.org/wiki/Convert_seconds_to_compound_duration
name = "convert_seconds_to_compound_duration"
path = "src/convert_seconds_to_compound_duration.rs"

[[bin]]
# http://rosettacode.org/wiki/Conway's_Game_of_Life
name = "conways_game_of_life"
path = "src/conways_game_of_life.rs"

[[bin]]
# http://rosettacode.org/wiki/Count_in_octal
name = "count_in_octal"
path = "src/count_in_octal.rs"
test = false

[[bin]]
# http://www.rosettacode.org/wiki/Count_occurrences_of_a_substring
name = "count_occurences_of_substring"
path = "src/count_occurences_of_substring.rs"

[[bin]]
# http://rosettacode.org/wiki/CRC-32
name = "crc_32"
path = "src/crc_32.rs"

[[bin]]
# http://rosettacode.org/wiki/CSV_data_manipulation
name = "csv_data_manipulation"
path = "src/csv_data_manipulation.rs"

[[bin]]
# http://rosettacode.org/wiki/Currying
name = "currying"
path = "src/currying.rs"
test = false

[[bin]]
# http://www.rosettacode.org/wiki/Deal_cards_for_FreeCell
name = "deal_cards_for_freecell"
path = "src/deal_cards_for_freecell.rs"

[[bin]]
# http://rosettacode.org/wiki/Define_a_primitive_data_type
name = "define_a_primitive_data_type"
path = "src/define_a_primitive_data_type.rs"

[[bin]]
# http://rosettacode.org/wiki/Delete_a_file
name = "delete_a_file"
path = "src/delete_a_file.rs"

[[bin]]
# http://rosettacode.org/wiki/Determine_if_only_one_instance_is_running
name = "determine_if_only_one_instance_is_running"
path = "src/determine_if_only_one_instance_is_running.rs"

[[bin]]
# http://rosettacode.org/wiki/Dijkstra's_algorithm
name = "dijkstras_algorithm"
path = "src/dijkstras_algorithm.rs"

[[bin]]
# http://rosettacode.org/wiki/Dining_philosophers
name = "dining_philosophers"
path = "src/dining_philosophers.rs"

[[bin]]
# http://rosettacode.org/wiki/DNS_query
name = "dns_query"
path = "src/dns_query.rs"

[[bin]]
# http://www.rosettacode.org/wiki/Doubly-linked_list/Element_definition
name = "doubly_linked_list_element_definition"
path = "src/doubly_linked_list/element_definition.rs"

[[bin]]
# http://www.rosettacode.org/wiki/Doubly-linked_list/Element_insertion
name = "doubly_linked_list_element_insertion"
path = "src/doubly_linked_list/element_insertion.rs"

[[bin]]
# http://rosettacode.org/wiki/Echo_server
name = "echo_server"
path = "src/echo_server.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Empty_program
name = "empty"
path = "src/empty.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Empty_directory
name = "empty_directory"
path = "src/empty_directory.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Enforced_mutability
name = "enforced_immutability"
path = "src/enforced_immutability.rs"

[[bin]]
# http://rosettacode.org/wiki/Enumerations
name = "enumerations"
path = "src/enumerations.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Environment_variables
name = "environment_variables"
path = "src/environment_variables.rs"

[[bin]]
# http://rosettacode.org/wiki/Ethiopian_multiplication
name = "ethiopian_multiplication"
path = "src/ethiopian_multiplication.rs"

[[bin]]
# http://rosettacode.org/wiki/Euler's_sum_of_powers_conjecture
name = "eulers_sum_of_powers_conjecture"
path = "src/eulers_sum_of_powers_conjecture.rs"

[[bin]]
# http://rosettacode.org/wiki/Even_or_odd
name = "even_or_odd"
path = "src/even_or_odd.rs"

[[bin]]
# http://rosettacode.org/wiki/Execute_a_system_command
name = "execute_a_system_command"
path = "src/execute_a_system_command.rs"

[[bin]]
# http://rosettacode.org/wiki/Execute_Brain****
name = "execute_brainfuck"
path = "src/execute_brainfuck.rs"

[[bin]]
# http://rosettacode.org/wiki/Execute_HQ9+
name = "execute_hq9_plus"
path = "src/execute_hq9_plus.rs"

[[bin]]
# http://rosettacode.org/wiki/Factors_of_an_integer
name = "factor_int"
path = "src/factor_int.rs"

[[bin]]
# http://rosettacode.org/wiki/Factorial
name = "factorial"
path = "src/factorial.rs"

[[bin]]
# http://rosettacode.org/wiki/FASTA_format
name = "fasta"
path = "src/fasta.rs"

[[bin]]
# http://rosettacode.org/wiki/Fibonacci_sequence
name = "fibonacci"
path = "src/fibonacci.rs"

[[bin]]
# http://rosettacode.org/wiki/Fibonacci_n-step_number_sequences
name = "fibonacci_n-step_number_sequences"
path = "src/fibonacci_n-step_number_sequences.rs"

[[bin]]
# http://rosettacode.org/wiki/File_input/output
name = "file_input_output"
path = "src/file_input_output.rs"

[[bin]]
# http://rosettacode.org/wiki/File_size
name = "filesize"
path = "src/filesize.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Filter
name = "filter"
path = "src/filter.rs"

[[bin]]
# http://rosettacode.org/wiki/FizzBuzz
name = "fizzbuzz"
path = "src/fizzbuzz.rs"

[[bin]]
# http://rosettacode.org/wiki/Flatten_a_list
name = "flatten_list"
path = "src/flatten_list.rs"

[[bin]]
# http://rosettacode.org/wiki/Fork
name = "fork"
path = "src/fork.rs"

[[bin]]
# http://rosettacode.org/wiki/Formatted_numeric_output
name = "formatted_numeric_output"
path = "src/formatted_numeric_output.rs"

[[bin]]
# http://rosettacode.org/wiki/Four_bit_adder
name = "four_bit_adder"
path = "src/four_bit_adder.rs"

[[bin]]
# http://rosettacode.org/wiki/Function_composition
name = "function_composition"
path = "src/function_composition.rs"

[[bin]]
# http://rosettacode.org/wiki/Function_definition
name = "function_def"
path = "src/function_def.rs"

[[bin]]
# http://rosettacode.org/wiki/General_FizzBuzz
name = "general_fizzbuzz"
path = "src/general_fizzbuzz.rs"

[[bin]]
# http://rosettacode.org/wiki/Generate_lower_case_ASCII_alphabet
name = "generate_lower_case_ascii_alphabet"
path = "src/generate_lower_case_ascii_alphabet.rs"

[[bin]]
# http://rosettacode.org/wiki/Gray_code
name = "gray_code"
path = "src/gray_code.rs"

[[bin]]
# http://rosettacode.org/wiki/Greatest_element_of_a_list
name = "greater_element_list"
path = "src/greater_element_list.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Greatest_subsequential_sum
name = "greatest_subsequential_sum"
path = "src/greatest_subsequential_sum.rs"

[[bin]]
# http://www.rosettacode.org/wiki/Guess_the_number/With_feedback_(player)
name = "guess_the_number_with_feedback_player"
path = "src/guess_the_number/with_feedback_player.rs"

[[bin]]
# http://rosettacode.org/wiki/Hailstone_sequence
name = "hailstone"
path = "src/hailstone.rs"

[[bin]]
# http://rosettacode.org/wiki/Happy_numbers
name = "happy_numbers"
path = "src/happy_numbers.rs"

[[bin]]
# http://rosettacode.org/wiki/Harshad_or_Niven_series
name = "harshad_or_niven_series"
path = "src/harshad_or_niven_series.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Hash_from_two_arrays
name = "hash_from_two_arrays"
path = "src/hash_from_two_arrays.rs"

[[bin]]
# http://rosettacode.org/wiki/Hash_join
name = "hash_join"
path = "src/hash_join.rs"

[[bin]]
# http://www.rosettacode.org/wiki/Hello_world/Line_printer
name = "hello_world_line_printer"
path = "src/hello_world/line_printer.rs"

[[bin]]
# http://rosettacode.org/wiki/Hello_world/Newbie
name = "hello_world_newbie"
path = "src/hello_world/newbie.rs"

[[bin]]
# http://rosettacode.org/wiki/Hello_world/Newline_omission
name = "hello_world_newline_omission"
path = "src/hello_world/newline_omission.rs"

[[bin]]
# http://rosettacode.org/wiki/Hello_world/Standard_error
name = "hello_world_standard_error"
path = "src/hello_world/standard_error.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Hello_world/Text
name = "hello_world_text"
path = "src/hello_world/text.rs"

[[bin]]
# http://rosettacode.org/wiki/Here_document
name = "here_document"
path = "src/here_document.rs"

[[bin]]
# http://rosettacode.org/wiki/Higher-order_functions
name = "higher_order_functions"
path = "src/higher_order_functions.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Hofstadter_Q_sequence
name = "hofstadter_q"
path = "src/hofstadter_q.rs"

[[bin]]
# http://rosettacode.org/wiki/Host_introspection
name = "host_introspection"
path = "src/host_introspection.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Hough_transform
name = "hough_transform"
path = "src/hough_transform.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Huffman_coding
name = "huffman_coding"
path = "src/huffman_coding.rs"

[[bin]]
# http://rosettacode.org/wiki/I_before_E_except_after_C
name = "i_before_e_except_after_c"
path = "src/i_before_e_except_after_c.rs"

[[bin]]
# http://rosettacode.org/wiki/Increment_a_numerical_string
name = "increment_a_numerical_string"
path = "src/increment_a_numerical_string.rs"

[[bin]]
# http://rosettacode.org/wiki/Infinity
name = "infinity"
path = "src/infinity.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Input_loop
name = "input_loop"
path = "src/input_loop.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Integer_comparison
name = "integer_comparison"
path = "src/integer_comparison.rs"

[[bin]]
# http://rosettacode.org/wiki/The_ISAAC_Cipher
name = "isaac"
path = "src/isaac.rs"

[[bin]]
# https://rosettacode.org/wiki/Iterated_digits_squaring
name = "iterated_digits_squaring"
path = "src/iterated_digits_squaring.rs"

[[bin]]
# http://rosettacode.org/wiki/Jaro_distance
name = "jaro_distance"
path = "src/jaro_distance.rs"

[[bin]]
# http://rosettacode.org/wiki/Jensen's_Device
name = "jensens_device"
path = "src/jensens_device.rs"

[[bin]]
# http://rosettacode.org/wiki/JortSort
name = "jortsort"
path = "src/jortsort.rs"

[[bin]]
# http://rosettacode.org/wiki/Josephus_problem
name = "josephus_problem"
path = "src/josephus_problem.rs"

[[bin]]
# http://rosettacode.org/wiki/Knapsack_problem/0-1
name = "knapsack_problem_0-1"
path = "src/knapsack_problem/0-1.rs"

[[bin]]
# http://rosettacode.org/wiki/Knight's_tour
name = "knights_tour"
path = "src/knights_tour.rs"

[[bin]]
# http://rosettacode.org/wiki/Langton's_ant
name = "langtons_ant"
path = "src/langtons_ant.rs"

[[bin]]
# http://rosettacode.org/wiki/Leap_year
name = "leap_year"
path = "src/leap_year.rs"

[[bin]]
# http://rosettacode.org/wiki/Letter_frequency
name = "letter_frequency"
path = "src/letter_frequency.rs"

[[bin]]
# http://rosettacode.org/wiki/Levenshtein_distance
name = "levenshtein_distance"
path = "src/levenshtein_distance.rs"

[[bin]]
# http://rosettacode.org/wiki/Levenshtein_distance/Alignment
name = "levenshtein_distance_alignment"
path = "src/levenshtein_distance/alignment.rs"

[[bin]]
# http://rosettacode.org/wiki/Linear_congruential_generator
name = "linear_congruential_generator"
path = "src/linear_congruential_generator.rs"

[[bin]]
# http://rosettacode.org/wiki/Longest_increasing_subsequence
name = "longest_common_subsequence"
path = "src/longest_common_subsequence.rs"

[[bin]]
# http://rosettacode.org/wiki/Loop_over_multiple_arrays_simultaneously
name = "loop_over_multiple_arrays_simultaneously"
path = "src/loop_over_multiple_arrays_simulataneously.rs"

[[bin]]
# http://rosettacode.org/wiki/Loops/Continue
name = "loops_continue"
path = "src/loops/continue.rs"

[[bin]]
# http://rosettacode.org/wiki/Loops/Do-while
name = "loops_do_while"
path = "src/loops/do_while.rs"

[[bin]]
# http://rosettacode.org/wiki/Loops/Downward_for
name = "loops_downward_for"
path = "src/loops/downward_for.rs"

[[bin]]
# http://rosettacode.org/wiki/Loops/For
name = "loops_for"
path = "src/loops/for.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Loops/For_with_a_specified_step
name = "loops_for_with_a_specified_step"
path = "src/loops/for_with_a_specified_step.rs"

[[bin]]
# http://rosettacode.org/wiki/Loops/Foreach
name = "loops_foreach"
path = "src/loops/foreach.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Loops/Infinite
name = "loops_infinite"
path = "src/loops/infinite.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Loops/N_plus_one_half
name = "loops_n_plus_one_half"
path = "src/loops/n_plus_one_half.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Loops/While
name = "loops_while"
path = "src/loops/while.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Ludic_numbers
name = "ludic"
path = "src/ludic.rs"
test = false

[[bin]]
# http://http://rosettacode.org/wiki/Luhn_test_of_credit_card_numbers
name = "luhn_test"
path = "src/luhn_test.rs"

[[bin]]
# http://rosettacode.org/wiki/LZW_compression
name = "lzw"
path = "src/lzw.rs"

[[bin]]
# http://rosettacode.org/wiki/Magic_squares_of_odd_order
name = "magic_squares_of_odd_order"
path = "src/magic_squares_of_odd_order.rs"

[[bin]]
# http://rosettacode.org/wiki/Man_or_boy_test
name = "man_or_boy"
path = "src/man_or_boy.rs"

[[bin]]
# http://rosettacode.org/wiki/Map_range
name = "map_range"
path = "src/map_range.rs"

[[bin]]
# http://rosettacode.org/wiki/Execute_a_Markov_algorithm
name = "markov_algorithm"
path = "src/markov_algorithm.rs"

[[bin]]
# http://rosettacode.org/wiki/Maximum_triangle_path_sum
name = "maximum_triangle_path_sum"
path = "src/maximum_triangle_path_sum.rs"

[[bin]]
# http://rosettacode.org/wiki/MD5/Implementation
name = "md5_implementation"
path = "src/md5/implementation.rs"

[[bin]]
# http://rosettacode.org/wiki/Averages/Mean_angle
name = "mean_angle"
path = "src/mean_angle.rs"

[[bin]]
# http://rosettacode.org/wiki/Menu
name = "menu"
path = "src/menu.rs"

[[bin]]
# https://rosettacode.org/wiki/Metaprogramming
name = "metaprogramming"
path = "src/metaprogramming.rs"


[[bin]]
# http://rosettacode.org/wiki/Metered_concurrency
name = "metered_concurrency"
path = "src/metered_concurrency.rs"

[[bin]]
# http://rosettacode.org/wiki/Middle_three_digits
name = "middle_three_digits"
path = "src/middle_three_digits.rs"

[[bin]]
# http://rosettacode.org/wiki/Modular_inverse
name = "modular_inverse"
path = "src/modular_inverse.rs"

[[bin]]
# https://rosettacode.org/wiki/Multiplication_tables
name = "multiplication_tables"
path = "src/multiplication_tables.rs"

[[bin]]
# http://rosettacode.org/wiki/Mutual_recursion
name = "mutual_recursion"
path = "src/mutual_recursion.rs"

[[bin]]
# http://rosettacode.org/wiki/N-queens_problem
name = "n_queens"
path = "src/n_queens.rs"

[[bin]]
# http://rosettacode.org/wiki/N'th
name = "nth"
path = "src/nth.rs"

[[bin]]
# http://rosettacode.org/wiki/Null_object
name = "null_object"
path = "src/null_object.rs"

[[bin]]
# http://rosettacode.org/wiki/Abundant,_deficient_and_perfect_number_classifications
name = "number_classifications"
path = "src/number_classifications.rs"

[[bin]]
# http://rosettacode.org/wiki/Numerical_integration
name = "numerical_integration"
path = "src/numerical_integration.rs"

[[bin]]
# http://rosettacode.org/wiki/Ordered_words
name = "ordered_words"
path = "src/ordered_words.rs"

[[bin]]
# http://rosettacode.org/wiki/Palindrome_detection
name = "palindrome"
path = "src/palindrome.rs"

[[bin]]
# http://rosettacode.org/wiki/Pangram_checker
name = "pangram"
path = "src/pangram.rs"

[[bin]]
# http://rosettacode.org/wiki/Parametric_polymorphism
name = "parametric_polymorphism"
path = "src/parametric_polymorphism.rs"

[[bin]]
# http://rosettacode.org/wiki/Pascal%27s_triangle
name = "pascals_triangle"
path = "src/pascals_triangle.rs"

[[bin]]
# http://rosettacode.org/wiki/Perfect_numbers
name = "perfect_numbers"
path = "src/perfect_numbers.rs"

[[bin]]
# http://rosettacode.org/wiki/Permutations_with_repetitions
name = "permutations_with_repetitions"
path = "src/permutations_with_repetitions.rs"

[[bin]]
# http://rosettacode.org/wiki/Population_count
name = "population_count"
path = "src/population_count.rs"

[[bin]]
# http://rosettacode.org/wiki/Power_set
name = "power_set"
path = "src/power_set.rs"

[[bin]]
# http://rosettacode.org/wiki/Price_fraction
name = "price_fraction"
path = "src/price_fraction.rs"

[[bin]]
# http://rosettacode.org/wiki/Primality_by_trial_division
name = "primality_by_trial_division"
path = "src/primality_by_trial_division.rs"

[[bin]]
# https://rosettacode.org/wiki/Program_name
name = "program_name"
path = "src/program_name.rs"

[[bin]]
# http://rosettacode.org/wiki/Proper_divisors
name = "proper_divisors"
path = "src/proper_divisors.rs"

[[bin]]
# http://rosettacode.org/wiki/Pythagorean_triples
name = "pythagorean_triples"
path = "src/pythagorean_triples.rs"

[[bin]]
# http://rosettacode.org/wiki/Queue/Definition
name = "queue_definition"
path = "src/queue/definition.rs"

[[bin]]
# http://rosettacode.org/wiki/Read_entire_file
name = "read_entire_file"
path = "src/read_entire_file.rs"

[[bin]]
# http://rosettacode.org/wiki/Read_a_file_line_by_line
name = "read_file_line"
path = "src/read_file_line.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Read_a_specific_line_from_a_file
name = "read_file_specific_line"
path = "src/read_file_specific_line.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Real_constants_and_functions
name = "real_constants_and_functions"
path = "src/real_constants_and_functions.rs"

[[bin]]
# http://rosettacode.org/wiki/Find_limit_of_recursion
name = "recursion_depth"
path = "src/recursion_depth.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Remove_duplicate_elements
name = "remove_duplicate_elements"
path = "src/remove_duplicate_elements.rs"

[[bin]]
# http://rosettacode.org/wiki/Rename_a_file
name = "rename_a_file"
path = "src/rename_a_file.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Repeat_a_string
name = "repeat_str"
path = "src/repeat_str.rs"

[[bin]]
# http://rosettacode.org/wiki/Globally_replace_text_in_several_files
name = "replace_word"
path = "src/replace_word.rs"

[[bin]]
# http://rosettacode.org/wiki/Return_multiple_values
name = "return_multiple_values"
path = "src/return_multiple_values.rs"

[[bin]]
# http://rosettacode.org/wiki/Reverse_words_in_a_string
name = "reverse_words_str"
path = "src/reverse_words_str.rs"

[[bin]]
# http://rosettacode.org/wiki/Roman_numerals/Decode
name = "roman_numerals_decode"
path = "src/roman_numerals/decode.rs"

[[bin]]
# http://rosettacode.org/wiki/Roman_numerals/Encode
name = "roman_numerals_encode"
path = "src/roman_numerals/encode.rs"

[[bin]]
# http://rosettacode.org/wiki/Rot-13
name = "rot13"
path = "src/rot13.rs"

[[bin]]
# http://rosettacode.org/wiki/S-Expressions
name = "s_expressions"
path = "src/s_expressions.rs"

[[bin]]
# http://rosettacode.org/wiki/Search_a_list
name = "search_a_list"
path = "src/search_a_list.rs"

[[bin]]
# http://rosettacode.org/wiki/Self-describing_numbers
name = "self-describing_numbers"
path = "src/self-describing_numbers.rs"

[[bin]]
# http://rosettacode.org/wiki/Sequence_of_non-squares
name = "sequence_of_non-squares"
path = "src/sequence_of_non-squares.rs"

[[bin]]
# http://rosettacode.org/wiki/Set
name = "set"
path = "src/set.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/SHA-1
name = "sha1"
path = "src/sha1.rs"

[[bin]]
# http://rosettacode.org/wiki/Short-circuit_evaluation
name = "short_circuit_evaluation"
path = "src/short_circuit_evaluation.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Sierpinski_triangle
name = "sierpinski_triangle"
path = "src/sierpinski_triangle.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Sieve_of_Eratosthenes
name = "sieve_eratosthenes"
path = "src/sieve_eratosthenes.rs"

[[bin]]
# http://rosettacode.org/wiki/Singly-linked_list/Element_definition
name = "singly_linked_list_element_definition"
path = "src/singly_linked_list/element_definition.rs"

[[bin]]
# http://rosettacode.org/wiki/Singly-linked_list/Element_insertion
name = "singly_linked_list_element_insertion"
path = "src/singly_linked_list/element_insertion.rs"

[[bin]]
# http://rosettacode.org/wiki/Singly-linked_list/Traversal
name = "singly_linked_list_traversal"
path = "src/singly_linked_list/traversal.rs"

[[bin]]
# http://rosettacode.org/wiki/Sleep
name = "sleep"
path = "src/sleep.rs"

[[bin]]
# http://rosettacode.org/wiki/Sockets
name = "sockets"
path = "src/sockets.rs"

[[bin]]
# http://rosettacode.org/wiki/Sort_an_array_of_composite_structures
name = "sort_an_array_of_composites"
path = "src/sort_an_array_of_composites.rs"

[[bin]]
# http://rosettacode.org/wiki/Sort_an_integer_array
name = "sort_an_int_array"
path = "src/sort_an_int_array.rs"

[[bin]]
# http://rosettacode.org/wiki/Sort_disjoint_sublist
name = "sort_disjoint_sublist"
path = "src/sort_disjoint_sublist.rs"

[[bin]]
# http://rosettacode.org/wiki/Sort_using_a_custom_comparator
name = "sort_using_custom_comparator"
path = "src/sort_using_custom_comparator.rs"

[[bin]]
# http://rosettacode.org/wiki/Sorting_algorithms/Bogosort
name = "sorting_algorithms_bogo_sort"
path = "src/sorting_algorithms/bogo_sort.rs"

[[bin]]
# http://rosettacode.org/wiki/Sorting_algorithms/Comb_sort
name = "sorting_algorithms_comb_sort"
path = "src/sorting_algorithms/comb_sort.rs"

[[bin]]
# http://rosettacode.org/wiki/Sorting_algorithms/Counting_sort
name = "sorting_algorithms_counting_sort"
path = "src/sorting_algorithms/counting_sort.rs"

[[bin]]
# https://en.wikipedia.org/wiki/Gnome_sort
name = "sorting_algorithms_gnome_sort"
path = "src/sorting_algorithms/gnome_sort.rs"

[[bin]]
# http://rosettacode.org/wiki/Sorting_algorithms/Heapsort
name = "sorting_algorithms_heap_sort"
path = "src/sorting_algorithms/heap_sort.rs"

[[bin]]
# http://rosettacode.org/wiki/Sorting_algorithms/Merge_sort
name = "sorting_algorithms_merge_sort"
path = "src/sorting_algorithms/merge_sort.rs"

[[bin]]
# http://rosettacode.org/wiki/Sorting_algorithms/Pancake_sort
name = "sorting_algorithms_pancake_sort"
path = "src/sorting_algorithms/pancake_sort.rs"

[[bin]]
# http://rosettacode.org/wiki/Sorting_algorithms/Quicksort
name = "sorting_algorithms_quick_sort"
path = "src/sorting_algorithms/quick_sort.rs"

[[bin]]
# http://rosettacode.org/wiki/Sorting_algorithms/Radix_sort
name = "sorting_algorithms_radix_sort"
path = "src/sorting_algorithms/radix_sort.rs"

[[bin]]
# http://rosettacode.org/wiki/Sorting_algorithms/Selection_sort
name = "sorting_algorithms_selection_sort"
path = "src/sorting_algorithms/selection_sort.rs"

[[bin]]
# http://rosettacode.org/wiki/Sorting_algorithms/Sleep_sort
name = "sorting_algorithms_sleep_sort"
path = "src/sorting_algorithms/sleep_sort.rs"

[[bin]]
# http://rosettacode.org/wiki/Stack
name = "stack"
path = "src/stack.rs"

[[bin]]
# http://rosettacode.org/wiki/Standard_deviation
name = "stdev"
path = "src/stdev.rs"

[[bin]]
# http://rosettacode.org/wiki/String_case
name = "string_case"
path = "src/string_case.rs"

[[bin]]
# http://rosettacode.org/wiki/String_comparison
name = "string_comparison"
path = "src/string_comparison.rs"

[[bin]]
# http://rosettacode.org/wiki/String_concatenation
name = "string_concatenation"
path = "src/string_concatenation.rs"

[[bin]]
# http://rosettacode.org/wiki/String_interpolation_%28included%29
name = "string_interpolation"
path = "src/string_interpolation.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/String_interpolation_(included)
name = "string_interpolation_included"
path = "src/string_interpolation_included.rs"

[[bin]]
# http://rosettacode.org/wiki/Determine_if_a_string_is_numeric
name = "string_is_numeric"
path = "src/string_is_numeric.rs"

[[bin]]
# http://rosettacode.org/wiki/String_matching
name = "string_matching"
path = "src/string_matching.rs"

[[bin]]
# http://rosettacode.org/wiki/Strip_comments_from_a_string
name = "strip_comments_from_a_string"
path = "src/strip_comments_from_a_string.rs"

[[bin]]
# http://rosettacode.org/wiki/Strip_whitespace_from_a_string/Top_and_tail
name = "strip_whitespace_from_a_string_top_and_tail"
path = "src/strip_whitespace_from_a_string/top_and_tail.rs"

[[bin]]
# http://rosettacode.org/wiki/Sudoku
name = "sudoku"
path = "src/sudoku.rs"

[[bin]]
# http://rosettacode.org/wiki/Sum_and_product_of_an_array
name = "sum_and_product_of_an_array"
path = "src/sum_and_product_of_an_array.rs"

[[bin]]
# http://rosettacode.org/wiki/Sum_digits_of_an_integer
name = "sum_digits"
path = "src/sum_digits.rs"

[[bin]]
# http://rosettacode.org/wiki/Sum_of_a_series
name = "sum_of_a_series"
path = "src/sum_of_a_series.rs"

[[bin]]
# http://rosettacode.org/wiki/Sum_of_squares
name = "sum_of_squares"
path = "src/sum_of_squares.rs"

[[bin]]
# http://rosettacode.org/wiki/Generic_swap
name = "swap"
path = "src/swap.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Synchronous_concurrency
name = "synchronous_concurrency"
path = "src/synchronous_concurrency.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Taxicab_numbers
name = "taxicab_numbers"
path = "src/taxicab_numbers.rs"

[[bin]]
# http://rosettacode.org/wiki/The_Twelve_Days_of_Christmas
name = "the_twelve_days_of_christmas"
path = "src/the_twelve_days_of_christmas.rs"

[[bin]]
# http://rosettacode.org/wiki/Tokenize_a_string
name = "tokenize_a_string"
path = "src/tokenize_a_string.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Towers_of_Hanoi
name = "towers_of_hanoi"
path = "src/towers_of_hanoi.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Tree_traversal
name = "tree_traversal"
path = "src/tree_traversal.rs"

[[bin]]
# http://rosettacode.org/wiki/Truncate_a_file
name = "truncate-a-file"
path = "src/truncate_a_file.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/Ulam_spiral_(for_primes)
name = "ulam_spiral_for_primes"
path = "src/ulam_spiral_for_primes.rs"

[[bin]]
# http://rosettacode.org/wiki/Unicode_variable_names
name = "unicode_variable_names"
path = "src/unicode_variable_names.rs"

[[bin]]
# http://rosettacode.org/wiki/Unix/ls
name = "unix_ls"
path = "src/unix/ls.rs"
test = false

[[bin]]
# http://rosettacode.org/wiki/User_input/Text
name = "user_input_text"
path = "src/user_input/text.rs"

[[bin]]
# http://rosettacode.org/wiki/Vigen%C3%A8re_cipher
name = "vigenere"
path = "src/vigenere.rs"

[[bin]]
# http://rosettacode.org/wiki/Wireworld
name = "wireworld"
path = "src/wireworld.rs"

[[bin]]
# http://rosettacode.org/wiki/Word_wrap
name = "word_wrap"
path = "src/word_wrap.rs"

[[bin]]
# http://rosettacode.org/wiki/Write_entire_file
name = "write_entire_file"
path = "src/write_entire_file.rs"

[[bin]]
# http://rosettacode.org/wiki/Zero_to_the_zero_power
name = "zero_to_the_zero_power"
path = "src/zero_to_the_zero_power.rs"

[[bin]]
# http://rosettacode.org/wiki/Zig-zag_matrix
name = "zig-zag_matrix"
path = "src/zig-zag_matrix.rs"
